syntax = "proto3";
package ironpdfengineproto;
import "basic.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message PdfiumFormFieldTypesP {
  int32 enum_value = 1;
}

message PdfiumComboBoxFieldP {
  repeated string options = 1;
  int32 selected_index = 2;
}

message PdfiumCheckBoxFieldP {
  bool BooleanValue = 1;
}

message PdfiumTextFieldP {}

message PdfiumUnknownFieldP {}

message PdfiumFormFieldP {
  int32  annotation_index = 1;
  string name = 2;
  int32 page_index = 3;
  bool read_only = 4; //in c# we need to call GetFormFieldIsReadOnly but in protobuf server must call this value when form field object was created
  PdfiumFormFieldTypesP type = 5;
  string value = 6;
  double width = 7;
  double height = 8;
  double x = 9;
  double y = 10;
  oneof sub_type {
    PdfiumComboBoxFieldP combo_box_field = 11;
    PdfiumCheckBoxFieldP check_box_field = 12;
    PdfiumTextFieldP text_field = 13;
    PdfiumUnknownFieldP unknown_field = 14;
  }
}

message PdfiumPdfFormP {
  repeated PdfiumFormFieldP form_fields = 1;
}

message PdfiumGetFormRequestP {
  PdfDocumentP document = 1;
}

message PdfiumGetFormResultP {
  oneof result_or_exception {
    PdfiumPdfFormP result = 1;
    RemoteExceptionP exception = 2;
  }
}

message PdfiumRenameFormFieldResultP
{
  oneof result_or_exception {
    string result = 1;
    RemoteExceptionP exception = 2;
  }
}

message PdfiumRenameFieldRequestP {
  PdfDocumentP document = 1;
  string current_field_name = 2;
  string new_field_name = 3;
}

message PdfiumSetFormFieldValueRequestP {
  PdfDocumentP document = 1;
  int32 annotation_index = 2;
  int32 page_index = 3;
  string form_field_value = 4;
}

message PdfiumGetFormFieldValueResultP {
  oneof result_or_exception {
    string result = 1;
    RemoteExceptionP exception = 2;
  }
}

message PdfiumGetFormFieldValueRequestP {
  PdfDocumentP document = 1;
  int32 annotation_index = 2;
  int32 page_index = 3;
}

message PdfiumGetFormFieldIsReadOnlyResultP {
  oneof result_or_exception {
    bool result = 1;
    RemoteExceptionP exception = 2;
  }
}

message PdfiumGetFormFieldIsReadOnlyRequestP {
  PdfDocumentP document = 1;
  int32 annotation_index = 2;
  int32 page_index = 3;
}

message PdfiumGetComboboxSelectedIndexResultP {
  oneof result_or_exception {
    int32 result = 1;
    RemoteExceptionP exception = 2;
  }
}

message PdfiumComboboxOptionsP
{
  repeated string value = 1;
}

message PdfiumGetComboboxOptionsResultP {
  oneof result_or_exception {
    PdfiumComboboxOptionsP result = 1;
    RemoteExceptionP exception = 2;
  }
}
message PdfiumGetComboboxSelectedIndexRequestP {
  PdfDocumentP document = 1;
  int32 annotation_index = 2;
  int32 page_index = 3;
}

message PdfiumGetComboboxOptionsRequestP {
  PdfDocumentP document = 1;
  int32 annotation_index = 2;
  int32 page_index = 3;
}

message PdfiumSetFormFieldFontRequestP {
  PdfDocumentP document = 1;
  string field_name = 2;
  FontTypeP font_type = 3;
  optional int32 font_size = 4;
}

message PdfiumFlattenFormRequestP {
  PdfDocumentP document = 1;
  repeated int32 page_indexes = 2;
}

message PdfiumSetFormFieldIsReadOnlyRequestP {
  PdfDocumentP document = 1;
  int32 annotation_index = 2;
  int32 page_index = 3;
  bool is_read_only = 4;
}